--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     width: 1000px;
     background-color: #e9e9e9;
     top: -1px;
-    padding: 50px;
+    padding: 40px;
     padding-top: 0px;
     position: absolute;
     margin-left: auto;
@@ -10,6 +10,30 @@
     left: 0;
     right: 0;
 }
+hr {
+    border: 0;
+    height: 1px;
+    background: #333;
+    background-image: linear-gradient(to right, #ccc, #333, #ccc);
+}
+
+p {
+    font-family: "1.5";
+}
+
+h1 {
+   color: #2884;
+    }
+    
+p {
+    color: black;
+    
+}
+   p {
+    font-family: 'Vesper Libre', serif;
+}
+
+
 
 /*Write your CSS rules below!*/
 
